[tool.poetry]
name = "qstode"
version = "0.2.1"
description = "A web application serving as a tag based archive of links"
authors = ["Daniel Kertesz <daniel@spatof.org>"]
license = "BSD-2-Clause"

include = [
  "qstode/static/**/*",
  "qstode/templates/**/*"
]

[tool.poetry.dependencies]
python = "^3.4"
Flask = "^1.0"
Babel = "^2.6"
Flask-Babel = "^0.12.2"
Flask-Login = "^0.4.1"
Flask-WTF = "^0.14.2"
SQLAlchemy = "^1.2"
alembic = "^1.0"
iso8601 = "^0.1.12"
wtforms = "^2.2"
mysql-connector-python = {version = "^8.0",optional = true}

[tool.poetry.dev-dependencies]
tox = "^3.7"
flake8 = "^3.7"
factory_boy = "^2.11"

[tool.poetry.scripts]
qstode-scuttle-export = "qstode.cli.scuttle_exporter:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

